Better structure. Fixed DB problem (I think...)

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(annonser: List[models.Tables.Annons])(implicit messages: Messages)
+@(annonser: List[models.Annons])(implicit messages: Messages)
 
 @*
  * Call the the `main` template with two arguments. The first
