A lot of work in the front end. Fixed global map. Javascript state between views are ok now.

--- a/app/views/annons_listed.scala.html
+++ b/app/views/annons_listed.scala.html
@@ -4,7 +4,7 @@
     <div class="media">
         <div class="media-left">
             <a href="#">
-                <img class="media-object" src="@routes.Assets.versioned("images/a.jpg")" alt="..." height="42" width="42">
+                <img class="media-object" src="@routes.Assets.versioned("images/annons_imgs/"+annons.img)" alt="..." height="42" width="42">
             </a>
         </div>
         <div class="media-body">
