--- a/app/views/annons.scala.html
+++ b/app/views/annons.scala.html
@@ -2,15 +2,20 @@
 @*
 Google Maps Stuff
 *@
+@*
+Checks if the 'annons' got map coordinates.
+Load the scripts if it does.
+*@
+@if(annons.coordslat.nonEmpty){
 <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
-<script src="@routes.Assets.versioned("javascripts/google_maps.js")" type="text/javascript" defer></script>
+<script src="@routes.Assets.versioned("javascripts/google_maps_read.js")" type="text/javascript" defer></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANnIreWdGEZQkZsvJiONegQXO-Dd49-14&callback=initMap"
 defer></script>
 <script src="@routes.Assets.versioned("javascripts/testdeferasync.js")" type="text/javascript" defer></script>
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/google_maps.css")">
+}
 
-
-@main("Welcome to Play") {
+@main("Annons") {
     <h1>@annons.rubrik</h1>
     Annonssida!!!!!!
     <br>
@@ -21,6 +26,10 @@ defer></script>
     <div id="lat">@annons.coordslat</div>
     <div id="lng">@annons.coordslng</div>
     <br>
+    @*
+    Checks if the 'annons' got map coordinates.
+    Create map div if it does.
+    *@
     @if(annons.coordslat.nonEmpty){
         <div id="map" style="width:100%; height:100%;"></div>
     }
