--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,21 +1,31 @@
 @(annonser: List[models.Annons])(implicit messages: Messages)
 
-@*
- * Call the the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
+<script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
+<script src="@routes.Assets.versioned("javascripts/google_maps_global.js")" type="text/javascript" defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANnIreWdGEZQkZsvJiONegQXO-Dd49-14&callback=initMap"
+defer></script>
+<script src="@routes.Assets.versioned("javascripts/testdeferasync.js")" type="text/javascript" defer></script>
+<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/google_maps.css")">
 
-    <h2>Annonser</h2>
+@main("Annonser") {
 
-    Borttappat
-    <input type="checkbox" id="borttappat_checkbox">
-    Upphittat
-    <input type="checkbox" id="upphittat_checkbox">
+    <div class="row">
+        <div class="col-md-12" id="mapView">
+            <div id="map" style="width:100%; height:100%;"></div>
+        </div>
+        <div class="col-md-12" id="listView" style="display:none">
+            <h2>Annonser</h2>
 
-    @for(a <- annonser) {
-        @annons_listed(a)
-    }
+            Borttappat
+            <input type="checkbox" id="borttappat_checkbox">
+            Upphittat
+            <input type="checkbox" id="upphittat_checkbox">
+
+            @for(a <- annonser) {
+                @annons_listed(a)
+            }
+        </div>
+    </div>
+
 
 }
