--- a/app/views/lagg_till_annons.scala.html
+++ b/app/views/lagg_till_annons.scala.html
@@ -1,75 +1,22 @@
 @import models.Annons
-@(annonsForm: Form[Annons])(implicit messages: Messages)
+@(annonsForm: Form[AnnonsForm])(implicit messages: Messages)
 
     @*
     Google Maps Stuff
     *@
 <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
+<script src="@routes.Assets.versioned("javascripts/google_maps_create.js")" type="text/javascript" defer></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANnIreWdGEZQkZsvJiONegQXO-Dd49-14&callback=initMap"
-async defer></script>
-<script>
-
-        var myLatlng;
-        var map;
-        var marker;
-
-        function initMap() {
-            console.log("initMap()")
-
-            myLatlng = new google.maps.LatLng(59.328519,18.067878);
-
-            var mapOptions = {
-                zoom: 8,
-                center: myLatlng
-            }
-
-            map = new google.maps.Map(document.getElementById('map'), mapOptions);
-
-            // Place a draggable marker on the map
-            marker = new google.maps.Marker({
-                position: myLatlng,
-                map: map,
-                draggable:true,
-                title:"Drag me!"
-            });
-
-            marker.set("id", "myMarker");
-
-            whenLoaded();
-        }
-        // $("#myMarker").move(function(){console.log("dasdsad")})
-        var whenLoaded = function(){
-            $("#coordslat").val(marker.position.lat);
-            $("#coordslng").val(marker.position.lng);
-
-            marker.addListener("dragend", function(){
-                console.log("Drag end");
-                $("#coordslat").val(marker.position.lat);
-                $("#coordslng").val(marker.position.lng);
-            })
-
-        }
+defer></script>
+<script src="@routes.Assets.versioned("javascripts/testdeferasync.js")" type="text/javascript" defer></script>
+<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/google_maps.css")">
 
 
 
-</script>
-<style>
-html, body {
-height: 100%;
-margin: 0;
-padding: 0;
-}
-#map {
-height: 100%;
-width: 100%;
-}
-</style>
+@main("Skapa annons") {
 
 
-@main("Welcome to Play") {
-
-
-    @helper.form(action = routes.HomeController.postAnnons()) {
+    @helper.form(action = routes.HomeController.postAnnons(),  'enctype -> "multipart/form-data") {
         @helper.select(
             field = annonsForm("typ"),
             options = Seq(
@@ -81,9 +28,11 @@ width: 100%;
         @helper.inputText(annonsForm("rubrik"))
         @helper.textarea(annonsForm("text"))
         @helper.inputText(annonsForm("hittelon"))
-        @helper.inputText(annonsForm("coordslat"), 'id -> "coordslat", 'value -> "555")
+        @helper.inputText(annonsForm("coordslat"), 'id -> "coordslat")
         @helper.inputText(annonsForm("coordslng"), 'id -> "coordslng")
-
+        <input type="file" name="img">
+        <br>
+        Borde ha en knapp här som tar fram kartan ifall personen vill fylla i detta...
         <div id="map" style="width:100%; height:100%;"></div>
         <input type="submit">
     }
