--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -22,7 +22,7 @@
     <body>
 
         <div class="container">
-             @navbar()
+             @navbar(title)
              @content
         </div>
 
