Clickable items on the map. Marker colors.

--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -16,6 +16,9 @@
     <button type="button" class="btn btn-secondary btn-lg" id="laggTillAnnonsVersionToggleModeButton" onclick="location.href='@routes.HomeController.index()';"></button>
     <button type="button" class="btn btn-primary btn-lg" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
 }
+@*Logo HERE*@
+@*
 <span>
-<img src="@routes.Assets.versioned("images/annons_imgs/default.jpg")" alt="..." height="42" width="42">
+<img src="@routes.Assets.versioned("images/logo/lostandfound-small.jpg")" alt="logo">
 </span>
+*@
