--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(annonser: List[models.Annons])(implicit messages: Messages)
+@(annonser: List[models.Annons])(implicit messages: Messages, flash: Flash)
 
 <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
 <script src="@routes.Assets.versioned("javascripts/google_maps_global.js")" type="text/javascript" defer></script>
@@ -9,17 +9,24 @@ defer></script>
 
 @main("Annonser") {
 
-    <div class="row">
-        <div class="col-md-12" id="mapView">
-            <div id="map" style="width:100%; height:100%;"></div>
+    <div class="row" id="mapView">
+        <div class="col-xs-1">
         </div>
-        <div class="col-md-12" id="listView" style="display:none">
-            <h2>Annonser</h2>
+        <div class="col-xs-10">
+            <div id="map" ></div>
+        </div>
+        <div class="col-xs-1">
+        </div>
+    </div>
 
+    <div class="row" id="listView" style="display:none">
+        <div class="col-md-12">
+            <h2>Annonser</h2>
             Borttappat
             <input type="checkbox" id="borttappat_checkbox">
             Upphittat
             <input type="checkbox" id="upphittat_checkbox">
+            <span class="label label-danger">@flash.get("failure")</span>
 
             @for(a <- annonser) {
                 @annons_listed(a)
