--- a/app/views/lagg_till_annons.scala.html
+++ b/app/views/lagg_till_annons.scala.html
@@ -9,34 +9,202 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANnIreWdGEZQkZsvJiONegQXO-Dd49-14&callback=initMap"
 defer></script>
 <script src="@routes.Assets.versioned("javascripts/testdeferasync.js")" type="text/javascript" defer></script>
-<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/google_maps.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/google_maps_lagg_till_annons.css")">
 
 
 
 @main("Skapa annons") {
+@*      "id" -> optional(longNumber),
+"typ" -> text,
+"rubrik" -> text,
+"text" -> text,
+"hittelon" -> optional(number),
+"coordslat" -> optional(bigDecimal),
+"coordslng" -> optional(bigDecimal),
+"img" -> ignored(Option.empty[java.io.File]),
+"date" -> sqlDate,
+"category" -> text,
+"county" -> text,
+"uploader_name" -> text,
+"uploader_phone" -> text,
+"uploader_email" -> text,
+"uploader_password" -> text
+    *@
 
-
+    <div id="form_panel">
     @helper.form(action = routes.HomeController.postAnnons(),  'enctype -> "multipart/form-data") {
-        @helper.select(
-            field = annonsForm("typ"),
-            options = Seq(
-                "borttappat" -> "Borttappat",
-                "upphittat" -> "Upphittat"
-            ),
-            'default -> "Välj typ"
-        )
-        @helper.inputText(annonsForm("rubrik"))
-        @helper.textarea(annonsForm("text"))
-        @helper.inputText(annonsForm("hittelon"))
-        @helper.inputText(annonsForm("coordslat"), 'id -> "coordslat")
-        @helper.inputText(annonsForm("coordslng"), 'id -> "coordslng")
-        <input type="file" name="img">
-        <br>
-        Borde ha en knapp här som tar fram kartan ifall personen vill fylla i detta...
-        <div id="map" style="width:100%; height:100%;"></div>
+
+        <!-- HUVUDPANEL -->
+
+        <div id="object_panel">
+
+            <legend>Annons</legend>
+            xzasdsadsadsadasdas...
+            <!-- Typ -->
+            <div class="form-group row">
+                <label for="typ" class="col-sm-1 form-control-label">Typ</label>
+                <div class="col-sm-11">
+                    @helper.select(
+                        field = annonsForm("typ"),
+                        options = Seq(
+                            "borttappat" -> "Borttappat",
+                            "upphittat" -> "Upphittat"
+                        ),
+                        'default -> "Välj typ",
+                        'class -> "c-select",
+                        '_label -> null
+                    )
+                </div>
+            </div>
+
+            <!-- Rubrik -->
+            <div class="form-group row">
+                <label for="rubrik" class="col-sm-1 form-control-label">Rubrik</label>
+                <div class="col-sm-11">
+                    @helper.inputText(annonsForm("rubrik"), 'id -> "rubrik", 'placeholder -> "Rubrik", '_label -> null )
+                </div>
+            </div>
+
+            <!-- Beskrivning-->
+            <div class="form-group row">
+                <label for="text" class="col-sm-1 form-control-label">Beskrivning</label>
+                <div class="col-sm-11">
+                    @helper.textarea(annonsForm("text"), '_label -> null, 'id -> "text")
+                </div>
+            </div>
+
+            <!-- Datum -->
+            <div class="form-group row">
+                <label for="datum" class="col-sm-1 form-control-label">Datum</label>
+                <div class="col-sm-11">
+                    @helper.inputDate(annonsForm("date"), '_label -> null, 'id -> "datum", '_showConstraints -> false)
+                </div>
+            </div>
+
+            <!-- Kategori -->
+            <div class="form-group row">
+                <label for="category" class="col-sm-1 form-control-label">Kategori</label>
+                <div class="col-sm-11">
+                    @helper.select(
+                        field = annonsForm("category"),
+                        options = Seq(
+                            "Djur" -> "Djur",
+                            "Mobiltelefon" -> "Mobiltelefon"
+                        ),
+                        'default -> "Välj kategori",
+                        '_label -> null,
+                        'class -> "form-control",
+                        'id -> "category"
+                    )
+                </div>
+            </div>
+
+            <!-- Län -->
+            <div class="form-group row">
+                <label for="county" class="col-sm-1 form-control-label">Län</label>
+                <div class="col-sm-11">
+                    @helper.select(
+                        field = annonsForm("county"),
+                        options = Seq(
+                            "Gävleborgs län" -> "Gävleborgs län",
+                            "Stefansbergs län" -> "Stefansbergs län"
+                        ),
+                        'default -> "Välj län",
+                        '_label -> null,
+                        'id -> "county"
+                    )
+                </div>
+            </div>
+
+            <!-- Hittelön -->
+            <div class="form-group row">
+                <label for="hittelon" class="col-sm-1 form-control-label">Hittelön</label>
+                <div class="col-sm-11">
+                    @helper.inputText(annonsForm("hittelon"), '_label -> null, 'type -> "number", '_showConstraints -> false, 'id -> "hittelon")
+                </div>
+            </div>
+
+            <!-- Ladda upp bild -->
+            <div class="form-group row">
+                <label for="file" class="col-sm-1 form-control-label">Bild</label>
+                <div class="col-sm-11">
+                    <label class="file">
+                        <input type="file" name="img" id="file">
+                        <span class="file-custom"></span>
+                    </label>
+                </div>
+            </div>
+
+            <!-- Karta -->
+            <label>Var xxx du den?</label>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div id="map"></div>
+                </div>
+                <div class="col-sm-4"></div>
+                <div class="col-sm-4"></div>
+            </div>
+        </div>
+
+        <!-- END OF HUVUDPANEL-->
+
+        <!-- DINA KONTAKTUPPGIFTER -->
+
+        <div id="uploader_info_panel">
+            <legend>Dina kontaktuppgifter</legend>
+            dsadasdsdadasdasdsa...
+            <!-- Namn -->
+            <div class="form-group row">
+                <label for="uploader_name" class="col-sm-1 form-control-label">Namn</label>
+                <div class="col-sm-11">
+                    @helper.inputText(annonsForm("uploader_name"), '_label -> null, 'id -> "uploader_name")
+                </div>
+            </div>
+
+            <!-- Telefon -->
+            <div class="form-group row">
+                <label for="uploader_phone" class="col-sm-1 form-control-label">Telefon</label>
+                <div class="col-sm-11">
+                    @helper.inputText(annonsForm("uploader_phone"), '_label -> null, 'type -> "tel", 'id -> "uploader_phone")
+                </div>
+            </div>
+
+            <!-- E-post -->
+            <div class="form-group row">
+                <label for="uploader_email" class="col-sm-1 form-control-label">E-post</label>
+                <div class="col-sm-11">
+                    @helper.inputText(annonsForm("uploader_email"), '_label -> null, 'type -> "email", 'id -> "uploader_email")
+                </div>
+            </div>
+
+        </div>
+
+        <!-- END OF DINA KONTAKTUPPGIFTER -->
+
+        <!-- PASSWORD PANEL -->
+
+        <div id="password_panel">
+            <legend>Lösenord</legend>
+            Tillåter dig att ta bort annonsen vid ett senare tillfälle.
+            <!-- Password -->
+            <div class="form-group row">
+                <label for="uploader_password" class="col-sm-1 form-control-label">Lösenord</label>
+                <div class="col-sm-11">
+                    @helper.inputText(annonsForm("uploader_password"), '_label -> null, 'type -> "password", 'id -> "uploader_password")
+                </div>
+            </div>
+
+        </div>
+
+        <!-- END OF PASSWORD PANEL -->
+        <!-- HIDDEN -->
+        @helper.inputText(annonsForm("coordslat"), 'id -> "coordslat", '_label -> null, 'hidden -> "true", '_showConstraints -> false)
+        @helper.inputText(annonsForm("coordslng"), 'id -> "coordslng", '_label -> null, 'hidden -> "true", '_showConstraints -> false)
+
+        <!-- Submit button -->
         <input type="submit">
     }
-
+    </div>
 
     @*
     @helper.form(action = routes.HomeController.upload, 'enctype -> "multipart/form-data") {
