--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,3 +2,31 @@ body {
 	overflow-y:scroll;
 	background-color: lightblue;
 }
+
+#uploader_info_panel {
+    border-radius: 7px;
+    border: 1px solid #F7F7F9;
+    padding: 10px; 
+    /*margin: 20px;*/
+}
+
+#form_panel {
+    border-radius: 7px;
+    border: 1px solid #F7F7F9;
+    padding: 10px; 
+    /*margin: 20px;*/
+}
+
+#object_panel {
+    border-radius: 7px;
+    border: 1px solid #F7F7F9;
+    padding: 10px; 
+    /*margin: 20px;*/
+}
+
+#password_panel {
+    border-radius: 7px;
+    border: 1px solid #F7F7F9;
+    padding: 10px; 
+    /*margin: 20px;*/
+}
