--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,11 +22,18 @@ defer></script>
     <div class="row" id="listView" style="display:none">
         <div class="col-md-12">
             <h2>Annonser</h2>
+            @if(flash.get("failure")){
+                <div class="alert alert-danger" role="alert">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span class="sr-only">Error:</span>
+                    @flash.get("failure")
+                </div>
+            }
+
             Borttappat
             <input type="checkbox" id="borttappat_checkbox">
             Upphittat
             <input type="checkbox" id="upphittat_checkbox">
-            <span class="label label-danger">@flash.get("failure")</span>
 
             @for(a <- annonser) {
                 @annons_listed(a)
