--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,35 +1,27 @@
 @(title: String)
 
-<div class="row">
+<div id="nav_bar">
+    @if(title.equals("Annonser")){
+        <div id="page" hidden>Annonser</div>
 
-@if(title.equals("Annonser")){
-    <div id="page" hidden>Annonser</div>
-
-    <div class="col-xs-3">
         <button type="button" class="btn btn-primary btn-lg" id="toggleModeButton"></button>
-    </div>
-
-    <div class="col-xs-3"></div>
-
-    <div class="col-xs-3"></div>
-
-    <div class="col-xs-3">
         <button type="button" class="btn btn-secondary btn-lg" id="skapaAnnonsButton" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
-    </div>
-}
 
-@if(title.equals("Skapa annons")) {
-    <div id="page" hidden>Skapa annons</div>
-    <button type="button" class="btn btn-secondary btn-lg" id="laggTillAnnonsVersionToggleModeButton" onclick="location.href='@routes.HomeController.index()';"></button>
-    <button type="button" class="btn btn-primary btn-lg" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
-}
+    }
 
-@if(title.equals("Annons")) {
-    <div id="page" hidden>Annons</div>
-    <button type="button" class="btn btn-secondary btn-lg" id="laggTillAnnonsVersionToggleModeButton" onclick="location.href='@routes.HomeController.index()';"></button>
-    <button type="button" class="btn btn-primary btn-lg" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
-}
+    @if(title.equals("Skapa annons")) {
+        <div id="page" hidden>Skapa annons</div>
 
+        <button type="button" class="btn btn-secondary btn-lg" id="laggTillAnnonsVersionToggleModeButton" onclick="location.href='@routes.HomeController.index()';"></button>
+        <button type="button" class="btn btn-primary btn-lg" id="skapaAnnonsButtonClicked" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
+    }
+
+    @if(title.equals("Annons")) {
+        <div id="page" hidden>Annons</div>
+
+        <button type="button" class="btn btn-secondary btn-lg" id="laggTillAnnonsVersionToggleModeButton" onclick="location.href='@routes.HomeController.index()';"></button>
+        <button type="button" class="btn btn-primary btn-lg" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
+    }
 </div>
 @*Logo HERE*@
 @*
