--- a/app/views/annons_listed.scala.html
+++ b/app/views/annons_listed.scala.html
@@ -1,6 +1,6 @@
 @(annons: models.Annons)
 
-<div class="@annons.typ">
+<div class="annons_listed @annons.typ">
     <div class="media">
         <div class="media-left">
             <a href="#">
