--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,6 +14,10 @@ input:invalid {
 	/* border: 1px solid red; */
 }
 
+/*
+Lägg till annons
+*/
+
 #uploader_info_panel {
     border-radius: 7px;
     border: 1px solid #F7F7F9;
@@ -53,6 +57,33 @@ input:invalid {
     background-color: white;
 }
 
+/*
+Index
+*/
+
+#annonser_heading h2 {
+	
+}
+
+#index_views {
+    border-radius: 7px;
+    border: 1px solid #F7F7F9;
+    padding: 10px; 
+    background-color: #EDEFF0;
+    /*margin: 20px;*/
+}
+
+/*
+Annons listed
+*/
+
+.annons_listed {
+    border-radius: 7px;
+    border: 3px solid #F7F7F9;
+    padding: 10px; 
+    background-color: white;
+    /*margin: 20px;*/
+}
 
 /*
 Greens
