--- a/app/views/annons.scala.html
+++ b/app/views/annons.scala.html
@@ -11,37 +11,71 @@ Load the scripts if it does.
 <script src="@routes.Assets.versioned("javascripts/google_maps_read.js")" type="text/javascript" defer></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANnIreWdGEZQkZsvJiONegQXO-Dd49-14&callback=initMap"
 defer></script>
-<script src="@routes.Assets.versioned("javascripts/testdeferasync.js")" type="text/javascript" defer></script>
 <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/google_maps.css")">
 }
 
 @main("Annons") {
-    <h1>@annons.rubrik</h1>
-    Annonssida!!!!!!
-    <br>
-    Facebook share
-    <br>
-    Fixa med SEO (se hur jag kan få in det viktigaste i Play)
-    <br>
-    <div id="lat">@annons.coordslat</div>
-    <div id="lng">@annons.coordslng</div>
-    <br>
-    @helper.form(action = routes.HomeController.removeAnnons(annons.id.get)) {
+    <div id="annons_outside">
+        <div id="annons">
+            <h1>@annons.rubrik</h1>
 
-        @helper.inputPassword(removeAnnonsForm("password"), '_showConstraints -> false, '_label -> null)
-        <a class="btn btn-danger" href="#">
-            <i class="fa fa-trash-o fa-lg"></i> Delete</a>
-        <input type="submit">
-    }
-    <br>
+            <div class="imgLiquidFill imgLiquid" style="width:300px; height:300px;">
+                <img class="media-object img-rounded" src="@routes.Assets.versioned("images/annons_imgs/"+annons.img)" alt="@annons.typ.capitalize: @annons.rubrik">
+            </div>
 
-    @*
-    Checks if the 'annons' got map coordinates.
-    Create map div if it does.
-    *@
-    @if(annons.coordslat.nonEmpty){
-        <div id="map"></div>
-    }
+            <p>@annons.text</p>
+
+            @*
+            Checks if the 'annons' got map coordinates.
+            Create map div if it does.
+            *@
+            @if(annons.coordslat.nonEmpty){
+                <div class="row" id="mapView">
+                    <div class="col-xs-1">
+                    </div>
+                    <div class="col-xs-10">
+                        <div id="map" ></div>
+                    </div>
+                    <div class="col-xs-1">
+                    </div>
+                </div>
+            }
+
+            <br>
+
+            <a data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                <u>För dig som skapat annonsen</u>
+            </a>
+
+            <div class="collapse" id="collapseExample">
+                <div class="card card-block">
+                    <a class="btn btn-danger" href="#" data-toggle="modal" data-target=".bd-example-modal-sm">
+                        <i class="fa fa-trash-o fa-lg"></i> Ta bort</a>
+
+                    <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-sm">
+                            <div class="modal-content">
+                            @helper.form(action = routes.HomeController.removeAnnons(annons.id.get)) {
+
+                                <label class="form-control-label">Lösenord</label>
+                                @helper.inputPassword(removeAnnonsForm("password"), '_showConstraints -> false, '_label -> null, 'id -> "password", 'class -> "form-control")
 
 
+
+                                <button type="submit" class="form-control btn btn-danger">Ta bort</button>
+                            }
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+    <div id="typ" style="display: none">@annons.typ</div>
+    <div id="lat" style="display: none">@annons.coordslat</div>
+    <div id="lng" style="display: none">@annons.coordslng</div>
 }
