--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,31 +1,19 @@
 @(title: String)
 
-<div id="nav_bar">
-    @if(title.equals("Annonser")){
-        <div id="page" hidden>Annonser</div>
+@*
+Invisible div to keep track of which page is active
+Determine button colors.
+*@
+<div id="active_page" style="display: none;">@title</div>
 
-        <button type="button" class="btn btn-primary btn-lg" id="toggleModeButton"></button>
-        <button type="button" class="btn btn-secondary btn-lg" id="skapaAnnonsButton" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
+<nav id="nav_bar" class="navbar navbar-fixed-top">
 
-    }
+        <button type="button" class="btn btn-secondary" id="annonser_button" onclick="location.href='@routes.HomeController.index()';">Annonser</button>
 
-    @if(title.equals("Skapa annons")) {
-        <div id="page" hidden>Skapa annons</div>
-        @*
-        <a class="btn btn-danger" href="#" onclick="location.href='@routes.HomeController.index()';">
-            <i class="fa fa-trash-o fa-lg"></i> Delete</a>
-        *@
-        <button type="button" class="btn btn-secondary btn-lg" id="laggTillAnnonsVersionToggleModeButton" onclick="location.href='@routes.HomeController.index()';"></button>
-        <button type="button" class="btn btn-primary btn-lg" id="skapaAnnonsButtonClicked" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
-    }
+        <button type="button" class="btn btn-secondary" id="skapa_annons_button" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
 
-    @if(title.equals("Annons")) {
-        <div id="page" hidden>Annons</div>
 
-        <button type="button" class="btn btn-secondary btn-lg" id="laggTillAnnonsVersionToggleModeButton" onclick="location.href='@routes.HomeController.index()';"></button>
-        <button type="button" class="btn btn-primary btn-lg" onclick="location.href='@routes.HomeController.laggTillAnnons()';">Skapa annons</button>
-    }
-</div>
+</nav>
 @*Logo HERE*@
 @*
 <span>
